fix: fixed btn-outline-dark in dark mode

--- a/assets/css/app-dark.scss
+++ b/assets/css/app-dark.scss
@@ -16,11 +16,14 @@ $pre-color: $white;
 $input-bg:                              $black;
 $input-disabled-bg:                     $dark;
 
+// stylelint-disable scss/at-extend-no-missing-placeholder
 @media (prefers-color-scheme: dark) {
+  .btn-outline-dark {
+    @extend .text-light;
+  }
   .bg-dark, .bg-themed, .navbar-themed {
     background-color: #191d21 !important;
     .btn-outline-dark {
-      // stylelint-disable scss/at-extend-no-missing-placeholder
       @extend .text-light;
     }
   }
